<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="action_settings">Settings</string>
    <string name="by_distance">Distance</string>
    <string name="menu_add">Add a new track</string>
    <string name="empty">No data available</string>
    <string name="go_to_filter">Please go to \'filtermenu\'</string>
    <string name="empty_countyselection">Countryselection has no tracks</string>
    <string name="import_info">Background import is running, probably tracks are temporary inclompete.\nIn some seconds all tracks are available again</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="filter">Filter</string>
    <string name="filter_country">Filter country</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="preferences">Preferences</string>
    <string name="name">Name</string>
    <string name="newRating">new comment</string>
    <string name="note">Note</string>
    <string name="route">Route</string>
    <string name="detail">Detail</string>
    <string name="no_email_installed">There are no email clients installed</string>
    <string name="new_track">New track</string>
    <string name="coordinates">Coordinates</string>
    <string name="current_geo_location_unknown">Current geolocation unknown</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="rating_count">(%s ratings)</string>
    <string name="hours">Hours</string>
    <string name="notes">Notes</string>
    <string name="soil">Soil</string>
    <string name="website">Website</string>
    <string name="camping">Camping</string>
    <string name="kids_track">Kids Track</string>
    <string name="bike_cleaning">Bike cleaning</string>
    <string name="electricity">Electricity</string>
    <string name="showers">Showers</string>
    <string name="phone">Phone</string>
    <string name="length">Length</string>
    <string name="fees">Fees</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="track_error">Report track error</string>
    <string name="soil1clay">Clay</string>
    <string name="soil2sand">Sand</string>
    <string name="soil3top">Top</string>
    <string name="soil4claysand">Claysand</string>
    <string name="soil5rock">Rock</string>
    <string name="soil6gravel">Gravel</string>
    <string name="soil7hard">Hard</string>
    <string name="soil8soft">Soft</string>
    <string name="soil9middle">Middle</string>
    <string name="soil10mud">Mud</string>
    <string name="soil11dust">Dust</string>
    <string name="license">License</string>
    <string name="title_activity_filter">Trackfilter</string>
    <string name="tracks_with_kids_track">Tracks with kids-track</string>
    <string name="tracks_show_dealers">show dealers</string>
    <string name="open_days">Open days</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_acknowledge">License information</string>
    <string name="username_for_comments">Username for comments</string>
    <string name="user">User</string>
    <string name="feedback">Feedback</string>
    <string name="favorit">set as favorite</string>
    <string name="common">common</string>
    <string name="countries">Countries</string>
    <string name="contact">contact</string>
    <string name="showroom">showroom</string>
    <string name="workshop">workshop</string>
    <string name="Adress">Address</string>
    <string name="Brands">brands</string>
    <string name="title_activity_comment">comment</string>
    <string name="send">Send</string>
    <string name="default_username">username</string>
    <string name="noname">no name</string>
    <string name="tracks_imported">tracks imported</string>
    <string name="display">Display</string>
    <string name="unit_distance_measure">unit distance measure</string>
    <string name="showroute">Show route</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_zoom2myloc">zoom to my location</string>
    <string name="action_satellite">Satellite</string>
    <string name="action_traffic">Traffic</string>
    <string name="comment_alredy_exists">Comment already exists</string>
    <string name="uploadsuccess">Upload successful</string>
    <string name="uploadfail">Upload fail</string>
    <string name="title_activity_activity_image_slider">Image</string>
    <string name="tracksfound">%s tracks found</string>
    <string name="only_approved">only approved tracks</string>
    <string name="open_everyone">Everyone</string>
    <string name="open_member">Member only</string>
    <string name="open_race">Race only</string>
    <string name="open_dealer">Dealer</string>
    <string name="pictures">Pictures</string>
    <string name="filter_camping">Camping</string>
    <string name="filter_electricity">Electricity</string>
    <string name="filter_washing">Washing</string>
    <string name="filter_shower">Shower</string>
    <string name="country_anz">%s tracks</string>
    <string name="tracks">Tracks</string>
    <string name="navigate">Navigate</string>
    <string name="favorite_add">Added to favorites</string>
    <string name="favorite_delete">Deleted from favorites</string>
    <string name="myposition_not_known">my current position unknown, please wait some seconds and repeat again</string>
    <string name="no_country_selected">no countries selected</string>
    <string name="menu_search">Search</string>
    <string name="nothing_selected">nothing selected</string>
    <string name="events">events</string>
    <string name="access">access</string>
    <string name="edit_track">Edit track</string>
    <string name="unsaved_changes">unsaved changes</string>
    <string name="ask_unsaved_changes">Do you want to save these changes ?</string>
    <string name="cluster">Marker cluster</string>
    <string name="many_records">Many tracks can cause sometime slowness</string>
    <string name="done">Done</string>
    <string name="event_edit">Edit Event</string>
    <string name="event_add">Add Event</string>
    <string name="difficult">Difficult</string>
    <string name="only_opend">only open Tracks</string>
    <string name="vehicles">Vehicles/Info</string>
    <string name="noiselimit">Noiselimit</string>
    <string name="status">Status</string>
    <string name="open">open</string>
    <string name="closed_season">saisonel closed</string>
    <string name="closed_notyet">not yet open</string>
    <string name="closed">closed</string>
    <string name="closed_temp">temporarily closed</string>
    <string name="save_teackstage">Thank you ! We will merge your changes</string>
    <string name="firstime_dlg1">If you find something wrong in the data, please use the %s button at the bottom to share changes with all other community members</string>
    <string name="firstime_dlg2">If you find something wrong in this app please use menu %s instead of Google Play comments, we will fix it as soon as possible</string>
    <string name="firstime_title">
		<![CDATA[
          Thank you for choosing<br/><b><i>MX Tracks Info</i></b>
           ]]>
    </string>
    <string name="picture_pick">Pick picture</string>
    <string name="picture_make">Make picture</string>
    <string name="locationservices">Location services</string>
    <string name="ask_locationservices">Actual location could not be requested, do you want to change your location settings ?</string>
    <string name="info_reapir">Your database is corrupt, please restart to repair or deinstall and install the app</string>
    <string name="close">Close</string>
    <string name="trackname_required">Trackname is mandatory</string>
    <string name="stage_longclick">long click on red marker to move</string>
    <string name="click_to_upload_image">click to upload image</string>
    <string name="share">share</string>
    <string name="reset_filter">Filter reset</string>
    <string name="default_latlon">Location on map is unchanged</string>
    <string name="empty_user">- empty -</string>
    <string name="send_image_to_track">Put image to track</string>
    <string name="import_image">Import image to \'%s\'</string>
    <string name="use_tracking">Yes, I want to help to improve this app, and agree to send anonymous usage statistics.This doesn\'t include any
        personal information</string>
    <string name="filter_is_active">filter is active</string>
    <string name="allow_ask_track_updates">When I\'m next to a track, I allow to ask me, if there is something changed to track data, eg. opening
        hours, events ... or share some track pictures. Each rider has an advantage when I participate to improve track data</string>
    <string name="notification_small">You are next to this track. Are the track information up to date ?</string>
    <string name="notification_big">You are next to this track. Are the track information up to date, do you have some actual track
        pictures, are there some upcoming events ?\nEach rider has an advantage when I participate to improve track data</string>
    <string name="improve_track_info">improve track info</string>
    <string name="PEER_ERROR">There is an issue with the security. Often a wrong time setting causes this. Please set your time, or let do it
        with Android via network. Sometime this don\'t work either, then connect to a WLAN and do it there</string>
    <string name="HOST_ERROR">There is an issue with the network connection. Often, a device reboot solve this issue</string>
    <string name="location">location</string>
    <string name="all">all</string>
    <string name="indoor">indoor</string>
    <string name="outdoor">outdoor</string>
    <string name="show_on_map">Show on map</string>
    <string name="search_hint">Track search</string>
    <string name="LOCATION_EXPLAIN_AND_RETHINK_ABOUT">Without this permission the app can\'t calculate your distance to tracks.\n\nDo you want to
        recheck your permissions ?</string>
    <string name="enable_europe">Now you see all tracks of whole Europe, if MX Info is too slow, you can reduce displayed countries in menu
        «Filter»</string>
    <string name="wrong_facebook_url">Url has wrong format. It should start with \'https://m.facebook.com/....\'</string>
    <string name="show_pro_dialog">You found a function, which is only in PRO version available. To enable this function you can purchase the PRO
        version</string>
    <string name="jump_google_play_store">Jump to Google Play Store</string>
</resources>
