<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:fab="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/layout_fab">


    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabNewTrack"
        style="@style/MenuButtonsSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_track"
        android:visibility="gone"
        fab:fab_label="@string/new_track"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabEvent"
        style="@style/MenuButtonsSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_event_note_white_24px"
        fab:fab_label="@string/event_add"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabPictures"
        style="@style/MenuButtonsSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_a_photo_white_24px"
        fab:fab_label="@string/pictures"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabComment"
        style="@style/MenuButtonsSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_comment_white_24px"
        fab:fab_label="@string/title_activity_comment"/>
</merge>
